# futaba

./: .flake8.ini  .gitignore  .hound.yml  .travis.yml  CODEOWNERS  CONTRIBUTING.md  JOURNAL_PATHS.md  LICENSE  README.md  _ci  deploy.sh  dockerfile  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
.travis/: format_check.sh
futaba/: __init__.py  __main__.py  client.py  config.py  delayed.py  dict_convert.py  download.py  emojis.py  enums.py  exceptions.py  expiry_dict.py  gist.py  help.py  infraction.py  lru.py  parse.py  permissions.py  punishment.py  similar.py  sql.py  str_builder.py  unicode.py  utils.py
futaba/cogs/: __init__.py  _core.py  _init.py  abc.py  settings.py
futaba/cogs/auth/: __init__.py  core.py
futaba/cogs/crosspost/: __init__.py  core.py
futaba/cogs/filter/: __init__.py  check.py  core.py  download.py  filter.py  manage.py
futaba/cogs/info/: __init__.py  alias.py  core.py
futaba/cogs/journal/: __init__.py  core.py  tracking.py
futaba/cogs/misc/: __init__.py  core.py  debug.py  inspirobot.py  mentionable.py
futaba/converters/: __init__.py  annotations.py  channel.py  emoji.py  message.py  role.py  user.py  utils.py
futaba/journal/: __init__.py  broadcaster.py  event.py  listener.py  process.py  router.py
futaba/navi/: __init__.py  abc.py  change_roles.py  factory.py  punish.py  restore_other_roles.py  send_message.py
futaba/sql/: __init__.py  _skeleton.py  handle.py  hooks.py  settings.py  transaction.py
misc/: config.toml  config.yaml  futaba.service  header.txt
(+82 files in other folders)
