[tool.poetry]
name = "futaba"
version = "0.6.2"
description = "A Discord Mod bot for the Programming server"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = ">=1.3,<2"
aiohttp = ">=3.7.4"
confusable-homoglyphs = ">=3.2.0"
dateparser = ">=0.7"
discord-py = ">=2"
psycopg2-binary = ">=2.8"
schema = ">=0.7"
textdistance = ">=4.2"
toml = ">=0.10"
tree-format = ">=0.1.2"
python-jose = ">=3.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pylint = ">=2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
